appId: dev.zapret.mobile
name: Zapret Mobile VPN stop
---
- assertVisible: "STOP VPN"
- tapOn: "STOP VPN"
- extendedWaitUntil:
    visible: "Status: Stopping"
    timeout: 10000
